Fix issue where a lot of text overflows the next text-only step

--- a/scrolly.css
+++ b/scrolly.css
@@ -99,7 +99,7 @@ map {
 
 .step {
   margin: 0rem 1rem 10rem 0rem;
-  height: 50vh;
+  min-height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
